# Mancini

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.sidecar  README.md  docker-compose.yml  pyproject.toml  requirements-live.txt  requirements-ml.txt  requirements-sidecar.txt  requirements.txt
backtest/: FIDELITY.md  __init__.py  analyze_fb_recovery.py  analyze_phantoms.py  analyze_trades.py  build_confidence_profile.py  calibration_check.py  compare_gates.py  compare_levels.py  danger_zone_analysis.py  danger_zone_c1prime_backtest.py  diagnose_filters.py  event_tier_study.py  fast_runner.py  feature_comparison.py  fetch_globex_data.py  fidelity_diff.py  find_mode1_red_days.py  five_year_backtest.py  five_year_long_short.py  five_year_rth_baseline.py  full_session_backtest.py  holdout_validate.py  metrics.py  mode1_red_filter_backtest.py  nautilus_production_5y.py  nautilus_runner.py  nautilus_strategy.py  optuna_gates.py  optuna_intraday.py  optuna_mode1_green.py  optuna_nautilus_tune.py  optuna_shelf.py  optuna_targeted.py  parse_all_mancini_posts.py  pnl_at_targets.py  production_strategy_5y.py  prop_firm_sim.py  regime_analysis.py  regime_backfill_sim.py  (+15 more)
config/: __init__.py  confidence_profile.json  econ_calendar_2026.json  levels.py  settings.py
core/: bar_aggregator.py  confidence.py  daily_structure.py  econ_calendar.py  elevator_down.py  elevator_up.py  intraday_context.py  level_scoring.py  mancini_overlay.py  mancini_plan_levels.py  market_data.py  mode1_detector.py  mode1_green_detector.py  patterns.py  patterns_short.py  pivots.py  (+4 more)
(+563 files in other folders)
